ctm-sf-homeloan-app/main/default/objects/Activity/fields/CalledDate__c.field-meta.xml
<CustomField>
    <fullName>CalledDate__c</fullName>
    <description>for demo purpose only, to be deleted</description>
    <label>Called Date</label>
    <type>Date</type>
</CustomField>