ctm-sf-homeloan-app/main/default/objects/Activity/fields/CallerId__c.field-meta.xml
<CustomField>
    <fullName>CallerId__c</fullName>
    <label>Caller Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>