ctm-sf-homeloan-app/main/default/objects/Activity/fields/InteractionURL__c.field-meta.xml
<CustomField>
    <fullName>InteractionURL__c</fullName>
    <label>Interaction URL</label>
    <type>Url</type>
</CustomField>