ctm-sf-homeloan-app/main/default/objects/Activity/fields/LoanTrackingOrder__c.field-meta.xml
<CustomField>
    <fullName>LoanTrackingOrder__c</fullName>
    <description
  >This field is used to sort the order of loan tracking activities</description>
    <label>Loan Tracking Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>