ctm-sf-homeloan-app/main/default/objects/Activity/fields/ParticipantCustomerId__c.field-meta.xml
<CustomField>
    <fullName>ParticipantCustomerId__c</fullName>
    <description>Customer ID passed through Genesys Cloud Web Messaging</description>
    <label>Participant Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>