ctm-sf-homeloan-app/main/default/objects/Activity/fields/TalkTime__c.field-meta.xml
<CustomField>
    <fullName>TalkTime__c</fullName>
    <description>for demo purpose only, to be deleted</description>
    <label>Talk Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>